--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "predeploy": "expo build:web",
+    "deploy": "gh-pages -d web-build"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "@react-navigation/drawer": "^6.6.15",
     "expo": "~51.0.16",
     "expo-constants": "~16.0.2",
@@ -23,13 +26,14 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6",
-    "@expo/metro-runtime": "~3.2.1"
+    "react-native-webview": "13.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "gh-pages": "^6.1.1",
     "typescript": "^5.1.3"
   },
-  "private": true
+  "private": true,
+  "homepage": "https://fluxsiarski.github.io/Expo-router-learning/"
 }
